<resources>
    <string name="app_name">Splitc</string>
    <string name="app_id">1142326379184126</string>
    <string name="action_settings">Settings</string>
    <string name="could_not_connect">Could not connect to server</string>
    <string name="forgot_password_header">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="logout_confirm">Are you sure?</string>
    <string name="rate_app">Rate us on the Play Store</string>
    <string name="rate_app_new">Rate us</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="feedback">Send feedback</string>
    <string name="about_us">About</string>
    <string name="login">Login</string>
    <string name="login_using_email">Or Login Using Email</string>
    <string name="signup_using_email">Or Sign up Using Email</string>
    <string name="signup_facebook">Sign up via Facebook</string>
    <string name="login_via_facebook">Login with Facebook</string>
    <string name="Login">Login</string>
    <string name="Sign_up">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="submit">SUBMIT</string>
    <string name="reset_result">An email with instructions to reset\npassword has been sent to your\nemail address. Please follow the\ninstructions in the email to reset\nyour password.</string>
    <string name="reset">Reset</string>
    <string name="Powered_by_opentable">Powered by\nOpenTable</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="email_blank_error">Email cannot be left blank</string>
    <string name="error_message">Unable to complete your request. Please try again later.</string>
    <string name="email_or_username">Email or username</string>
    <string name="edit_name_hint">Name</string>
    <string name="feedback_hint">Write something...</string>
    <string name="feedback_email">If you have something to say that doesn\'t fit here, please shoot us an email at android@baatna.com</string>
    <string name="feedback_email_subject">Zomato Android App Feedback</string>
    <string name="send_mail">Send Mail</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="feedback_title">Feedback</string>
    <string name="no_internet_message">Seems like you are not connected to the internet. Please try again later.</string>
    <string name="about_version">v1.32</string>
    <string name="about_text">Baatna is a platform that lets you borrow stuff instantly by shouting out your need to your neighbours, friends and people in your surroundings.</string>
    <string name="about_us_terms_of_use">Terms of Service</string>
    <string name="about_us_privacypolicy">Privacy Policy</string>
    <string name="save">Save</string>
    <string name="view_profile">View profile</string>
    <string name="messages">Messages</string>
    <string name="post_request">New Request</string>
    <string name="could_not_logout">Could not logout</string>
    <string name="category_hint">What would you like to borrow ?</string>
    <string name="time_duration">How many can fit in?</string>
    <string name="description_hint">Convince your neighbourhood\n\n<i><small>Eg Dear neighbourhood, I\'m looking to a company trip this weekend. I\'m heading to Agra for 2 days and would be great if you can travel alongwith.:)</small></i></string>
    <string name="post">Post</string>
    <string name="or_select_from_categories">Or select from categories</string>
    <string name="error_try_again">Something went wrong. \n Please try again later.</string>
    <string name="back_pressed_confimation">There are some unsaved changes. Do you want to continue?</string>
    <string name="signup_terms">By creating an account, you agree to Baatna\'s Terms of Service, Privacy Policy and Content Policies.</string>
    <string name="login_terms">By logging in you agree to Baatna\'s Terms of Service, Privacy Policy and Content Policies.</string>
    <string name="wishbox">Wishbox</string>
    <string name="view_wishbox">View History</string>
    <string name="wish_title_hint">You wished for a\n</string>
    <string name="wish_delete_text">Are you sure you want to delete the item?</string>
    <string name="your_wishbox">YOUR WISHBOX</string>
    <string name="err_occurred">An error occurred. Please try again.</string>
    <string name="institution">Institution</string>
    <string name="roll_number_hint">Invide code</string>
    <string name="select_an_option">Select an option</string>
    <string name="verifying_creds">Verifying credentials..</string>
    <string name="feed_user_joined">%1$sjoined your neighborhood</string>
    <string name="feed_user_requested">%1$swants to borrow a \n%2$sfor %3$d days.</string>
    <string name="feed_requested_fulfilled">%1$swas offered %2$s by %3$s</string>
    <string name="and_more"> and %1$s more.</string>
    <string name="message_user_requested">%1$soffered you a \n%2$s.</string>
    <string name="message_requested_fulfilled">%2$swants to borrow a \n%1$s.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="make_new_request">Make a new request</string>
    <string name="toast_share_longpress">Share</string>
    <string name="share_description">I am inviting you to try this interesting application that lets you borrow things for free.</string>
    <string name="redeem">Redeem</string>
    <string name="settings">Settings</string>
    <string name="wish_post_dialog">Posting your request..Please wait</string>
    <string name="update_rating_dialog">Posting your rating..Please wait</string>
    <string name="your_message">Your Message</string>
    <string name="sending_request">Sending request. Please wait..</string>
    <string name="rate_dialog_message">Help us spread the word. Rate us on Google Play.</string>
    <string name="rate_dialog_rate_now">Yes, let\'s do it</string>
    <string name="rate_dialog_remind">Remind me later</string>
    <string name="rate_dialog_never">Don\'t show this dialog again</string>
    <string name="rate_dialog_google_text">or share on Google+</string>

    <string name="delete_message">Delete</string>
    <string name="report_scam">Report scam</string>
    <string name="year">Year</string>
    <string name="contact_number">Contact Number</string>
    <string name="branch">Branch</string>
    <string name="hang_on">Hang on boss, we are sending the request..</string>
    <string name="update_message">We just rolled out another feature. You will have to update your application to see it.</string>
    <string name="update">Update</string>
    <string name="your_neighbourhood">Your neighborhood</string>
    <string name="help_out">Help %1$s out</string>
    <string name="terms">Terms</string>
    <string name="redeem_request">Fulfill a Request to Redeem</string>
    <string name="redeem_fulfill">Redeem the coupon</string>

    <string name="your_wishes">Your wishes</string>
    <string name="your_offers">Your offers</string>
    <string name="your_history">Your history</string>
    <string name="thanks_wish_tick">Thanks for offering %1$s your %2$s. Would you like to message %3$s?</string>
    <string name="later">Later</string>
    <string name="message">Message</string>
    <string name="wish_title_offered_hint">You offered\n</string>
    <string name="dialog_request_accepted">Your request has been accepted for %1$s days</string>
    <string name="dialog_change_time_duration">Do you want to change the duration?</string>
    <string name="rate_your_experience">How would you like to rate your \nexperience with</string>
    <string name="join_the_college"><u>Join the college community</u></string>

    <string name="skip">Skip</string>

    <string name="splash_description_1">Share helps you fetch a ride \nfrom people around you,\nin an instant</string>
    <string name="splash_description_2">Join the community and post\n your ride for anywhere \nyou travel</string>
    <string name="splash_description_3">Connect and travel with\na peer who offers\nyour request</string>
    <string name="splash_description_4">Share your rides with others\nto earn rewards and\ncredibility</string>

    <string name="email_required_text">OOPS!\n We couldn\'t fetch email.</string>
    <string name="email_required_hint">Email</string>

    <string name="drawer_menu_my_loads_string">Home</string>
    <string name="drawer_menu_order_history_string">My Rides</string>
    <string name="logout_text">Logout</string>

    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="exit_msg">Are you sure you want to go back?</string>

    <string name="pickup_time">Pickup time</string>
    <string name="trip_start_time">Trip starting at...</string>
    <string name="when">When?</string>
    <string name="number">Number</string>
    <string name="where">What\'s the plan?</string>

    <string name="pickup_date">Pick up Date</string>



</resources>
