<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <include layout="@layout/home_toolbar"/>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/contentFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:src="@drawable/ic_add_black"
            android:tint="@color/white"
            app:backgroundTint="@color/fab_color_menu_normal"
            android:layout_gravity="bottom|end"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/home_drawer"
        app:theme="@style/NavigationTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <com.application.splitc.utils.TextViewLight
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size14"
                android:padding="@dimen/size10"
                android:textColor="@color/zhl_dark"
                android:paddingTop="@dimen/height5"
                android:text="@string/feedback"
                android:onClick="feedback"
                android:paddingBottom="@dimen/height5"/>

            <com.application.splitc.utils.TextViewLight
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size14"
                android:padding="@dimen/size10"
                android:textColor="@color/zhl_dark"
                android:paddingTop="@dimen/height5"
                android:text="@string/about_us"
                android:onClick="aboutUs"
                android:paddingBottom="@dimen/height5"/>

            <com.application.splitc.utils.TextViewLight
                android:id="@+id/logoutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size14"
                android:text="@string/logout_text"
                android:padding="@dimen/size10"
                android:textColor="@color/zhl_dark"
                android:paddingTop="@dimen/height5"
                android:paddingBottom="@dimen/height5"
                android:layout_marginBottom="@dimen/height10"/>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
